# Adafruit_Python_PlatformDetect

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  README.rst  adafruit_platformdetect.py  pyproject.toml  requirements.txt  setup.py
.github/: release-drafter.yml
.github/workflows/: build.yml  release.yml
adafruit_platformdetect/: __init__.py  board.py  chip.py  protocols.py  revcodes.py
adafruit_platformdetect/boards/raspberrypi/: __init__.py
adafruit_platformdetect/constants/: __init__.py  boards.py  chips.py  u2if.py
docs/: api.rst  beaglebone_eeprom.txt  conf.py  index.rst  requirements.txt
test/: detect.py
