# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "Adafruit-PlatformDetect"
description = "Platform detection for use by libraries like Adafruit-Blinka."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
]
urls = {Homepage = "https://github.com/adafruit/Adafruit_Python_PlatformDetect"}
license = {text = "MIT"}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["adafruit_platformdetect", "adafruit_platformdetect.constants"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
